Fixed bug on mobile navbar

--- a/_general-styles.scss
+++ b/_general-styles.scss
@@ -134,3 +134,10 @@ display: none;
 .displayBlock {
 display: block;
 }
+
+/*------------------- Fixed position ------------------- */
+
+.fixed-position {
+    position: fixed;
+}
+
