--- a/styles.css
+++ b/styles.css
@@ -132,6 +132,11 @@ svg {
   display: block;
 }
 
+/*------------------- Fixed position ------------------- */
+.fixed-position {
+  position: fixed;
+}
+
 /*------------------- NAVBAR ------------------- */
 header {
   background-color: #266FF5;
@@ -736,6 +741,7 @@ footer .footer_container .usuariosFinancieros {
     top: 0;
     width: 100%;
     height: 100vh;
+    overflow-y: hidden;
     background: #266FF5;
     -webkit-transition: left 0.5s;
     transition: left 0.5s;
@@ -764,8 +770,7 @@ footer .footer_container .usuariosFinancieros {
     color: white;
   }
   header .menu-active {
-    position: absolute;
-    left: 0%;
+    left: 0;
     -webkit-transition: left .5s;
     transition: left .5s;
   }
